# MAID

./: .gitignore  README.md  config.toml  pyproject.toml
maid/: __init__.py  config.py  main.py
maid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
maid/ai/: client.py  gemini_client.py  mock_client.py  personalities.py
maid/capture/: audio.py  screen.py
maid/pipeline/: loop.py
maid/tts/: base.py  elevenlabs_tts.py  factory.py  openai_tts.py  pyttsx3_tts.py
maid/utils/: image.py
